--- a/core-web/libs/sdk/react/package.json
+++ b/core-web/libs/sdk/react/package.json
@@ -4,7 +4,7 @@
     "peerDependencies": {
         "react": ">=18",
         "react-dom": ">=18",
-        "@tinymce/tinymce-react": "^5.1.1"
+        "@tinymce/tinymce-react": "^5.1.1",
         "@dotcms/client": "0.0.1-alpha.32"
     },
     "description": "Official React Components library to render a dotCMS page.",
