--- a/examples/nextjs/jsconfig.json
+++ b/examples/nextjs/jsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "paths": {
             "@/*": ["./src/*"],
+            "@dotcms/react": ["../../core-web/dist/libs/sdk/react"],
+            "@dotcms/client": ["../../core-web/dist/libs/sdk/client"]          
         }
     }
 }
