chore: code cleanup

--- a/examples/nextjs/jsconfig.json
+++ b/examples/nextjs/jsconfig.json
@@ -1,9 +1,7 @@
 {
     "compilerOptions": {
         "paths": {
-            "@/*": ["./src/*"],
-            "@dotcms/react": ["../../core-web/dist/libs/sdk/react"],
-            "@dotcms/client": ["../../core-web/dist/libs/sdk/client"]          
+            "@/*": ["./src/*"]         
         }
     }
 }
