--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@tinymce/tinymce-react": "^5.1.1",
         "@dotcms/client": "0.0.1-alpha.32",
         "@dotcms/react": "0.0.1-alpha.32",
         "@dotcms/experiments": "0.0.1-alpha.32",
