--- a/core-web/libs/sdk/react/package.json
+++ b/core-web/libs/sdk/react/package.json
@@ -2,12 +2,12 @@
     "name": "@dotcms/react",
     "version": "0.0.1-alpha.33",
     "dependencies": {
-        "@tinymce/tinymce-react": "^5.1.1",
-        "@dotcms/client": "0.0.1-alpha.33"
+        "@tinymce/tinymce-react": "^5.1.1"
     },
     "peerDependencies": {
         "react": ">=18",
-        "react-dom": ">=18"
+        "react-dom": ">=18",
+        "@dotcms/client": "0.0.1-alpha.33"
     },
     "description": "Official React Components library to render a dotCMS page.",
     "repository": {
