--- a/core-web/libs/sdk/angular/package.json
+++ b/core-web/libs/sdk/angular/package.json
@@ -1,14 +1,17 @@
 {
     "name": "@dotcms/angular",
-    "version": "0.0.1-alpha.32",
+    "version": "0.0.1-alpha.33",
+    "dependencies": {
+        "@tinymce/tinymce-angular": "^8.0.0"
+    },
     "peerDependencies": {
         "@angular/common": "^17.1.0",
         "@angular/core": "^17.1.0",
         "@angular/router": "^17.1.0",
-        "@dotcms/client": "0.0.1-alpha.32",
-        "@tinymce/tinymce-angular": "^8.0.0",
+        "@dotcms/client": "0.0.1-alpha.33",
         "rxjs": "^7.8.0"
     },
+    "allowedNonPeerDependencies": ["@tinymce/tinymce-angular"],
     "description": "Official Angular Components library to render a dotCMS page.",
     "repository": {
         "type": "git",
