--- a/core-web/package.json
+++ b/core-web/package.json
@@ -74,6 +74,7 @@
         "@nx/angular": "19.5.6",
         "@tarekraafat/autocomplete.js": "^10.2.6",
         "@tinymce/tinymce-angular": "^7.0.0",
+        "@tinymce/tinymce-react": "^5.1.1",
         "@tiptap/core": "^2.0.0-beta.218",
         "@tiptap/extension-bubble-menu": "^2.0.0-beta.218",
         "@tiptap/extension-character-count": "^2.0.0-beta.218",
