ci(deployment): Edit Page V2 Automate the deploy of the SDK librar (#28259) (#29637)
### Proposed Changes

* This PR introduces a script enhancement that automates version
management and dependency updates for our SDK libraries and example
projects. The key improvements include:

1. **Version Bumping Logic**: 
- Updated the version bumping function to correctly handle the
`-alpha.X` suffix. The function now accurately increments the build
number, ensuring the new version format is correctly applied (e.g.,
`0.0.1-alpha.34` -> `0.0.1-alpha.35`).

2. **SDK Libraries Version Update**:
- All SDK libraries within the `sdk` directory now have their versions
consistently updated to the newly calculated version.

3. **Peer Dependencies Update**:
- Updated `peerDependencies` within the SDK libraries to reflect the new
version of the `client` library, ensuring internal consistency among the
SDK packages.

4. **Example Projects Dependency Update**:
- The script also updates the `dependencies` in all example projects
within the `../examples` directory to match the new SDK versions,
maintaining alignment across the entire project.

These changes streamline the process of managing versions and
dependencies, reducing manual effort and minimizing the risk of
inconsistencies.

* Includes a new GitHub Action that automates the process of publishing
our SDK libraries to the NPM registry (`deploy-sdk-npm`). The action
streamlines our release workflow by handling version management,
validation, and the actual publishing process, ensuring that our
packages are consistently and correctly published with minimal manual
intervention. This action will be triggered after any push on the master
branch if there is any changes on at least one of the sdk packages.

* Regarding the CI/CD in the initialize phase we added two new inputs,
`validation-level` and `custom-modules`, to specify validation levels
and custom modules respectively. Introduced a new output sdk_libs.
Updated the changes job to in

--- a/.github/workflows/cicd_3-trunk.yml
+++ b/.github/workflows/cicd_3-trunk.yml
@@ -30,6 +30,10 @@ on:
         description: 'Run all tests'
         type: boolean
         default: false
+      publish-npm-sdk-libs:
+        description: 'Publish NPM SDKs'
+        type: boolean
+        default: false        
 
 jobs:
   # Initialize the trunk check process
@@ -39,6 +43,8 @@ jobs:
     with:
       reuse-previous-build: ${{ inputs.reuse-previous-build || github.event_name != 'workflow_dispatch' }}
       build-on-missing-artifacts: ${{ inputs.build-on-missing-artifacts || github.event_name != 'workflow_dispatch' }}
+      validation-level: 'custom'
+      custom-modules: 'sdk_libs'      
 
   # Build job - only runs if no artifacts were found during initialization
   build:
@@ -95,6 +101,7 @@ jobs:
     uses: ./.github/workflows/cicd_comp_deployment-phase.yml
     with:
       artifact-run-id: ${{ needs.initialize.outputs.artifact-run-id }}
+      publish-npm-sdk-libs: ${{ needs.initialize.outputs.sdk_libs != 'false' && github.event_name != 'workflow_dispatch' }}
       environment: trunk
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
