#28259 Fixing the slack notifications.

--- a/.github/actions/core-cicd/notification/notify-slack/action.yaml
+++ b/.github/actions/core-cicd/notification/notify-slack/action.yaml
@@ -25,7 +25,7 @@ runs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "${{ inputs.payload }}"
+                  "text": ${{ toJSON(inputs.payload) }}
                 }
               }
             ]
