--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -107,6 +107,10 @@
         -->
 
         <dependency>
+            <groupId>com.dotcms</groupId>
+            <artifactId>ant-tooling</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.dotcms.lib</groupId>
             <artifactId>dot.aopalliance-repackaged</artifactId>
         </dependency>
@@ -1195,11 +1199,12 @@
             <artifactId>jersey-common</artifactId>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
-            <artifactId>jersey-hk2</artifactId>
+            <artifactId>jersey-cdi2-se</artifactId>
         </dependency>
-
+        -->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
@@ -1407,39 +1412,6 @@
             </exclusions>
         </dependency>
 
-        <!-- Weld CDI -->
-
-        <dependency>
-            <groupId>org.jboss.weld.servlet</groupId>
-            <artifactId>weld-servlet-shaded</artifactId>
-            <version>3.1.9.Final</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>bean-validator</artifactId>
-            <version>2.5.0-b06</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.hk2</groupId>
-            <artifactId>hk2-locator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Weld CDI -->
-
-        <dependency>
-            <groupId>io.smallrye</groupId>
-            <artifactId>jandex</artifactId>
-            <version>3.0.5</version>
-        </dependency>
-      
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
