chore: upgrade to angular v18

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -147,7 +147,7 @@
         "@faker-js/faker": "8.4.1",
         "@materia-ui/ngx-monaco-editor": "^6.0.0",
         "@mdx-js/react": "^2.1.2",
-        "@ngneat/spectator": "^19.0.0",
+        "@ngneat/spectator": "19.0.0",
         "@nx/cypress": "19.6.4",
         "@nx/devkit": "19.6.4",
         "@nx/esbuild": "19.6.4",
@@ -228,7 +228,7 @@
         "jest-fetch-mock": "^3.0.3",
         "jest-html-reporters": "^3.1.5",
         "jest-junit": "^16.0.0",
-        "jest-preset-angular": "14.0.4",
+        "jest-preset-angular": "14.2.2",
         "jsonc-eslint-parser": "^2.4.0",
         "karma": "6.4.0",
         "karma-chrome-launcher": "^3.1.0",
